Add navigation link to page2 in index.html

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
                         <span>実践的アプローチ</span>
                     </div>
                 </div>
+                <div class="mt-6 text-center">
+                    <a href="page2.html" class="inline-block px-8 py-3 bg-yellow-400 text-purple-900 font-bold rounded-lg hover:bg-yellow-300 transform hover:scale-105 transition duration-300 shadow-lg">
+                        <i class="fas fa-arrow-right mr-2"></i>ページ2へ（Railsファミリー完全版表）
+                    </a>
+                </div>
             </div>
         </div>
     </header>
