Add page3.html with Rails paired methods guide
- Create comprehensive guide for paired/opposite methods in Rails
- Include database operations (create/destroy, first/last)
- Add validation pairs (valid?/invalid?, blank?/present?)
- Include callbacks pairs (before/after for all lifecycle events)
- Add migration pairs (add/remove for columns, indexes, foreign keys)
- Include association pairs (has_one/belongs_to, has_many/belongs_to)
- Add string transformation pairs (pluralize/singularize, camelize/underscore)
- Include ActiveJob pairs (perform_later/perform_now)
- Add session/cache pairs (write/read, connect/disconnect)
- Include increment/decrement and array operation pairs
- Add navigation links between all three pages
- Visual design with gradient backgrounds and hover effects
- Explain design philosophy behind paired methods

--- a/page2.html
+++ b/page2.html
@@ -198,6 +198,7 @@
         
         <div class="navigation">
             <a href="index.html">← ページ1へ戻る</a>
+            <a href="page3.html">対になるメソッド一覧 →</a>
         </div>
 
         <div class="table-wrapper">
@@ -834,6 +835,7 @@
         
         <div class="navigation">
             <a href="index.html">← ページ1へ戻る</a>
+            <a href="page3.html">対になるメソッド一覧 →</a>
         </div>
     </div>
 
