Update Rails 7 filter information - ActionController::Filters integrated into Base
- Update all references from ActionController::Filters to ActionController::Base
- Add notes about Rails 7+ changes where filters are now part of Base
- Update page2.html with warning note about the important change
- Update page3.html method hierarchy to reflect new structure
- Update page-content.js search keywords
- Ensure all before_action, after_action references are correct

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                                         <li>• HTTPリクエスト処理（params, request, response）</li>
                                         <li>• レスポンス生成（render, redirect_to）</li>
                                         <li>• セッション管理（session, flash）</li>
-                                        <li>• フィルター機能（before_action, after_action）</li>
+                                        <li>• フィルター機能（before_action, after_action） ※Rails 7以降Baseに統合</li>
                                     </ul>
                                 </td>
                                 <td class="border border-gray-300 p-4 text-sm text-gray-600">
