--- a/page3.html
+++ b/page3.html
@@ -584,10 +584,10 @@ newest_user = User.order(:created_at).<span class="highlight-yellow">last</span>
                     <div class="method-name">before_action</div>
                     <div class="method-hierarchy">
                         <span class="family-badge grandparent">ActionController</span>
-                        <span class="family-badge parent">AbstractController::Callbacks</span>
+                        <span class="family-badge parent">ActionController::Base</span>
                         <span class="family-badge child">before_action</span>
                     </div>
-                    <div class="method-desc">アクション実行前</div>
+                    <div class="method-desc">アクション実行前（Rails 7以降Baseに統合）</div>
                     <div class="method-location">
                         <i class="fas fa-file-code"></i> コントローラーファイル内
                     </div>
@@ -597,10 +597,10 @@ newest_user = User.order(:created_at).<span class="highlight-yellow">last</span>
                     <div class="method-name">after_action</div>
                     <div class="method-hierarchy">
                         <span class="family-badge grandparent">ActionController</span>
-                        <span class="family-badge parent">AbstractController::Callbacks</span>
+                        <span class="family-badge parent">ActionController::Base</span>
                         <span class="family-badge child">after_action</span>
                     </div>
-                    <div class="method-desc">アクション実行後</div>
+                    <div class="method-desc">アクション実行後（Rails 7以降Baseに統合）</div>
                     <div class="method-location">
                         <i class="fas fa-file-code"></i> コントローラーファイル内
                     </div>
